--- a/debezium-kafka-connect/Chart.yaml
+++ b/debezium-kafka-connect/Chart.yaml
@@ -19,3 +19,7 @@ version: 0.1.0
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
 appVersion: 1.0
+
+maintainers:
+- name: George T. C. Lai
+  email: george@innotech.me
