--- a/debezium-kafka-connect/templates/service.yaml
+++ b/debezium-kafka-connect/templates/service.yaml
@@ -5,28 +5,15 @@ metadata:
   labels:
     {{- include "debezium-kafka-connect.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  {{- with .Values.service }}
+  type: {{ .type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    - port: {{ .restService.port }}
       protocol: TCP
-      name: http
+      name: {{ .restService.name | quote }}
+    - port: {{ .jmxService.port }}
+      protocol: TCP
+      name: {{ .jmxService.name | quote }}
+  {{- end }}
   selector:
     {{- include "debezium-kafka-connect.selectorLabels" . | nindent 4 }}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ template "cp-kafka-connect.fullname" . }}
-  labels:
-    app: {{ template "cp-kafka-connect.name" . }}
-    chart: {{ template "cp-kafka-connect.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-spec:
-  ports:
-    - name: kafka-connect
-      port: {{ .Values.servicePort }}
-  selector:
-    app: {{ template "cp-kafka-connect.name" . }}
-    release: {{ .Release.Name }}
