--- a/debezium-kafka-connect/values.yaml
+++ b/debezium-kafka-connect/values.yaml
@@ -34,6 +34,8 @@ serviceAccount:
 podSecurityContext: {}
   # fsGroup: 2000
 
+podAnnotations: {}
+
 securityContext: {}
   # capabilities:
   #   drop:
