fix(config): Fixed prometheus JMX env typo.
The correct environment variable w.r.t. Prometheus JMX port is JMX_PORT.

--- a/debezium-kafka-connect/templates/configmap.yaml
+++ b/debezium-kafka-connect/templates/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "debezium-kafka-connect.labels" . | nindent 4 }}
 data:
-  JMXPORT: {{ .Values.jmx.port | quote }}
+  JMX_PORT: {{ .Values.jmx.port | quote }}
   {{- with .Values.kafka }}
   GROUP_ID: "1"
   BOOTSTRAP_SERVERS: {{ .brokers | quote }}
