refactor: Refactorred according to the original YAML files.
All of the YAML files has been refactorred according to the original
YAML files.

--- a/innotech-frontend/templates/autoscaler.yaml
+++ b/innotech-frontend/templates/autoscaler.yaml
@@ -1,7 +1,8 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "innotech-frontend.fullname" . }}
+  name: {{ include "innotech-frontend.fullname" . | quote }}
+  namespace: {{ .Values.namespace | quote }}
   labels:
 {{ include "innotech-frontend.labels" . | indent 4 }}
 spec:
