--- a/innotech-frontend/templates/configmap-env.yaml
+++ b/innotech-frontend/templates/configmap-env.yaml
@@ -2,11 +2,12 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: {{ include "innotech-frontend.fullname" . }}-env
+  namespace: {{ .Values.namespace | quote }}
   labels:
     addonmanager.kubernetes.io/mode: Reconcile
 {{ include "innotech-frontend.labels" . | indent 4 }}
 data:
   env-config.js: |-
     window._env_ = {
-        CONFIG_URL: "https://PUBLIC_DOMAIN/config/{{ .Values.vendorId }}/web-K8S_NAMESPACE.json"
+        CONFIG_URL: "https://{{ .Values.publicDomain }}/config/{{ .Values.vendorId }}/web-{{ .Values.namespace }}.json"
     }
