--- a/innotech-frontend/values.yaml
+++ b/innotech-frontend/values.yaml
@@ -2,6 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+namespace: default
 replicaCount: 1
 
 image:
@@ -73,7 +74,8 @@ tolerations: []
 affinity: {}
 
 vendorId: "vd000"
-platformId: "platform"
+platformId: "pf000"
 # The envId corresponds to ${REF_NAME}
 envId: "uat"
 domainName: "ceshi22.com"
+publicDomain: "public.example.com"
