--- a/innotech-frontend/templates/ingress.yaml
+++ b/innotech-frontend/templates/ingress.yaml
@@ -1,25 +1,23 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ include "innotech-frontend.fullname" . }}
+  name: {{ include "innotech-frontend.fullname" . | quote }}
+  namespace: {{ .Values.namespace | quote }}
   labels:
 {{ include "innotech-frontend.labels" . | indent 4 }}
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: "nginx"
     # nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "5s"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600s"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600s"
     nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "3600s"
 spec:
-  # tls:
-  # - hosts:
-  #   - INGRESS_HOST.DOMAIN_NAME
   rules:
-  - host: {{ include "innotech-frontend.ingressHost" . }}
+  - host: {{ include "innotech-frontend.ingressHost" . | quote }}
     http:
       paths:
       - path: /
         backend:
-          serviceName: {{ include "innotech-frontend.fullname" . }}
+          serviceName: {{ include "innotech-frontend.fullname" . | quote }}
           servicePort: {{ .Values.service.port }}
