--- a/innotech-frontend/templates/service.yaml
+++ b/innotech-frontend/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "innotech-frontend.fullname" . | quote }}
-  namespace: {{ .Values.namespace | quote }}
+  namespace: {{ .Values.project.namespace | quote }}
   labels:
 {{ include "innotech-frontend.labels" . | indent 4 }}
 spec:
@@ -14,5 +14,5 @@ spec:
   selector:
     app: {{ include "innotech-frontend.appName" . | quote }}
     version: {{ .Values.image.tag | quote }}
-    venderid: {{ .Values.vendorId | quote }}
-    platformid: {{ .Values.platformId | quote }}
+    venderid: {{ .Values.project.vendorId | quote }}
+    platformid: {{ .Values.project.platformId | quote }}
