--- a/innotech-frontend/templates/autoscaler.yaml
+++ b/innotech-frontend/templates/autoscaler.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "innotech-frontend.fullname" . | quote }}
-  namespace: {{ .Values.namespace | quote }}
+  namespace: {{ .Values.project.namespace | quote }}
   labels:
 {{ include "innotech-frontend.labels" . | indent 4 }}
 spec:
