--- a/innotech-frontend/templates/configmap-env.yaml
+++ b/innotech-frontend/templates/configmap-env.yaml
@@ -1,7 +1,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: {{ include "innotech-frontend.fullname" . }}-env
+  name: {{ include "innotech-frontend.fullname" . | printf "%s-env" | quote }}
   namespace: {{ .Values.project.namespace | quote }}
   labels:
     addonmanager.kubernetes.io/mode: Reconcile
