--- a/traefik-values/tests/whoami.yaml
+++ b/traefik-values/tests/whoami.yaml
@@ -37,7 +37,7 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: simpleingressroute
+  name: whoami-ingressroute
   labels:
     app.kubernetes.io/name: whoami
     app.kubernetes.io/instance: whoami
