refactor(traefik): change hostname in whoami.yaml for test
change hostname in whoami.yaml for test

--- a/traefik-values/tests/whoami.yaml
+++ b/traefik-values/tests/whoami.yaml
@@ -46,7 +46,7 @@ spec:
   entryPoints:
     - web
   routes:
-  - match: Host(`whoami.bigdata-dev.tk`) && PathPrefix(`/notls`)
+  - match: Host(`whoami.bigdata-dev.inno`) && PathPrefix(`/notls`)
     kind: Rule
     services:
     - name: whoami
